# web3-grant

./: README.md
.github/workflows/: general.yml
cargo-fuzz/: README.md
cargo-fuzz/integer-overflow-or-underflow/: Cargo.toml  README.md
cargo-fuzz/integer-overflow-or-underflow/fuzz/: Cargo.toml
cargo-fuzz/integer-overflow-or-underflow/fuzz/fuzz_targets/: fuzz_add_overflows.rs  fuzz_constructor_works.rs  fuzz_sub_overflows.rs  fuzz_target_1.rs
cargo-fuzz/integer-overflow-or-underflow/src/: lib.rs
cargo-fuzz/set-contract-storage/: Cargo.toml  lib.rs
cargo-fuzz/set-contract-storage/fuzz/: Cargo.toml
cargo-fuzz/set-contract-storage/fuzz/fuzz_targets/: fuzz_allowance_must_not_change_on_failed_transfer.rs  fuzz_balance_of_works.rs  fuzz_misuse_contract_storage.rs  fuzz_new_works.rs  fuzz_total_supply_works.rs  fuzz_transfer_from_works.rs  fuzz_transfer_works.rs
curated-list-of-vulnerabilities/: README.md  additional-information.md
detectors/: README.md
detectors/cargo-fuzz/: .gitignore  README.md
detectors/cargo-fuzz/integer-overflow-or-underflow/fuzz/: Cargo.toml
detectors/cargo-fuzz/integer-overflow-or-underflow/fuzz/fuzz-targets/: fuzz-sub-overflows.rs
detectors/cargo-fuzz/integer-overflow-or-underflow/fuzz/fuzz_targets/: fuzz_add_overflows.rs  fuzz_sub_overflows.rs
detectors/cargo-fuzz/set-contract-storage/fuzz/: Cargo.toml
detectors/cargo-fuzz/set-contract-storage/fuzz/fuzz_targets/: fuzz_balance_of_works.rs  fuzz_transfer_from_works.rs
detectors/dylint/: README.md
detectors/dylint/smart-contract-linters/dos-unexpected-revert/: README.md
detectors/dylint/smart-contract-linters/set-contract-storage/: Cargo.toml
detectors/dylint/smart_contracts_linters/integer-overflow-or-underflow/: Cargo.toml
detectors/dylint/smart_contracts_linters/panic-error/: Cargo.toml
detectors/dylint/smart_contracts_linters/unexpected-revert/: Cargo.toml
detectors/semgrep/: README.md
detectors/semgrep/dos-unbounded-operation/: README.md  uncontrolled-var.yaml
detectors/semgrep/dos-unbounded-operation-with-vector/syntatic/: README.md  uncontrolled_var.yaml
detectors/semgrep/integer-overflow-or-underflow/: README.md  integer-overflow-or-underflow.yaml
detectors/semgrep/panic-error/: README.md
detectors/semgrep/set-contract-storage/: README.md
detectors/semgrep/set-contract-storage/syntactic/: unprotected-use.yaml
detectors/semgrep/set-contract-storage/syntatic/: unprotected-use.yaml
detectors/semgrep/set-contract-storage/tainting/: unprotected-use.yaml
detectors/semgrep/set_contract_storage/: READ.me  README.md
detectors/semgrep/set_contract_storage/syntatic/: README.md
docs/candidates/: README.md
docs/candidates/potential/: reentrancy.md
docs/candidates/template/: README.md
docs/candidates/unexpected_revert/remediated-example/: lib.rs
docs/candidates/unexpected_revert/vulnerable-example/: Cargo.toml  lib.rs
docs/detectors/dos-unbounded-operation/: README.md
docs/detectors/dos-unbounded-operation/remediated-example/: Cargo.toml  lib.rs
docs/detectors/dos-unbounded-operation/vulnerable-example/: Cargo.toml  lib.rs  out.txt
docs/detectors/integer-overflow-or-underflow/: integer-overflow-or-underflow.md
docs/detectors/integer-overflow-or-underflow/remediated-example/: Cargo.toml  lib.rs
docs/detectors/integer-overflow-or-underflow/vulnerable-example/: Cargo.toml  lib.rs
docs/detectors/panic-error/: panic-error.md
docs/detectors/panic-error/example/: Cargo.toml  Cargo.toml.bak  lib.rs  lib.rs.bak
docs/detectors/panic-error/remediated-example/: Cargo.toml  lib.rs
docs/detectors/panic-error/vulnerable-example/: lib.rs
docs/detectors/reentrancy/: reentrancy.md
docs/detectors/set-contract-storage/: README.md  set-contract-storage.md
docs/detectors/set-contract-storage/remediated-example/: Cargo.toml  lib.rs
docs/detectors/set-contract-storage/vulnerable-example/: Cargo.toml  lib.rs  transactions.txt
docs/detectors/unused-return-enum/: README.md  unused-return-enum.md
docs/detectors/unused-return-enum/remediated-example/: lib.rs
docs/detectors/unused-return-enum/vulnerable-example/: lib.rs
docs/dylint/: README.md
docs/dylint/panic-error/: README.md
docs/dylint/panic-error/src/: lib.rs
docs/dylint/set_contract_storage/src/: lib.rs
docs/dylint/smart_contracts_linters/dos-unbounded-operation/: Cargo.toml
docs/dylint/smart_contracts_linters/panic-error/: README.md
docs/dylint/smart_contracts_linters/reentrancy/: Cargo.toml
docs/dylint/smart_contracts_linters/set_contract_storage/: README.md
docs/dylint/smart_contracts_linters/unused_return_enum/: README.md
docs/semgrep/: README.md  constant-propagation.yaml  panic-error.rs  panic-error.yaml  set-contract-storage.rs  set-contract-storage.yaml  taint-analysis.yaml
scripts/: list-paths-with-underscores.sh  run-cargo-fmt.sh
set_contract_storage/: Cargo.toml  lib.rs  readme.md
vulnerabilities/: .gitignore  README.md
vulnerabilities/candidates/: README.md
vulnerabilities/candidates/template/: README.md
vulnerabilities/examples/dos-unbounded-operation/: README.md
vulnerabilities/examples/dos-unbounded-operation-with-vector/remediated-example/: lib.rs
vulnerabilities/examples/dos-unbounded-operation-with-vector/vulnerable-example/: Cargo.toml  lib.rs
vulnerabilities/examples/dos-unexpected-revert/: README.md
vulnerabilities/examples/dos-unexpected-revert-with-vector/: README.md
vulnerabilities/examples/dos-unexpected-revert-with-vector/remediated-example/: lib.rs
vulnerabilities/examples/integer-overflow-or-underflow/: README.md
vulnerabilities/examples/panic-error/: README.md
vulnerabilities/examples/panic-error/remediated-example/: Cargo.toml
vulnerabilities/examples/reentrancy/: README.md
vulnerabilities/examples/set-contract-storage/: README.md
vulnerabilities/examples/unexpected-revert/: README.md
vulnerabilities/examples/unused-return-enum/: README.md
vulnerabilities/semgrep/: constant-propagation.rs  integer-overflow-or-underflow-fixed.rs  integer-overflow-or-underflow.rs  panic-error-fixed.rs  taint-analysis.rs
(+52 files in other folders)
