[package]
name = "integer-overflow-or-underflow-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.0.1", features = ["derive"] }
ink = { version = "4.0.1", default-features = false }
integer-overflow-or-underflow = { path = "../../../docs/detectors/integer-overflow-or-underflow/vulnerable-example" }
libfuzzer-sys = "0.4"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_constructor_works"
path = "fuzz_targets/fuzz_constructor_works.rs"
test = false
doc = false

[[bin]]
name = "fuzz_add_overflows"
path = "fuzz_targets/fuzz_add_overflows.rs"
test = false
doc = false

[[bin]]
name = "fuzz_sub_overflows"
path = "fuzz_targets/fuzz_sub_overflows.rs"
test = false
doc = false
