[package]
name = "integer-overflow-or-underflow-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.0.1", features = ["derive"] }
ink = { version = "4.0.1", default-features = false }
integer-overflow-or-underflow = { path = "../../../../vulnerabilities/examples/integer-overflow-or-underflow/vulnerable-example" }
libfuzzer-sys = "0.4"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz-constructor-works"
path = "fuzz-targets/fuzz-constructor-works.rs"
test = false
doc = false

[[bin]]
name = "fuzz-add-overflows"
path = "fuzz-targets/fuzz-add-overflows.rs"
test = false
doc = false

[[bin]]
name = "fuzz-sub-overflows"
path = "fuzz-targets/fuzz-sub-overflows.rs"
test = false
doc = false
