[package]
name = "set-contract-storage-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.0.1", features = ["derive"] }
ink = { version = "4.0.1", default-features = false }
libfuzzer-sys = "0.4"
set-contract-storage = { path = "../../../docs/detectors/set-contract-storage/vulnerable-example" }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_new_works"
path = "fuzz_targets/fuzz_new_works.rs"
test = false
doc = false

[[bin]]
name = "fuzz_total_supply_works"
path = "fuzz_targets/fuzz_total_supply_works.rs"
test = false
doc = false

[[bin]]
name = "fuzz_balance_of_works"
path = "fuzz_targets/fuzz_balance_of_works.rs"
test = false
doc = false


[[bin]]
name = "fuzz_transfer_works"
path = "fuzz_targets/fuzz_transfer_works.rs"
test = false
doc = false


[[bin]]
name = "fuzz_transfer_from_works"
path = "fuzz_targets/fuzz_transfer_from_works.rs"
test = false
doc = false

[[bin]]
name = "fuzz_allowance_must_not_change_on_failed_transfer"
path = "fuzz_targets/fuzz_allowance_must_not_change_on_failed_transfer.rs"
test = false
doc = false

[[bin]]
name = "fuzz_misuse_contract_storage"
path = "fuzz_targets/fuzz_misuse_contract_storage.rs"
test = false
doc = false
