[package]
name = "set-contract-storage-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.0.1", features = ["derive"] }
ink = { version = "4.0.1", default-features = false }
libfuzzer-sys = "0.4"
set-contract-storage = { path = "../../../../vulnerabilities/examples/set-contract-storage/vulnerable-example" }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz-new-works"
path = "fuzz-targets/fuzz-new-works.rs"
test = false
doc = false

[[bin]]
name = "fuzz-total-supply-works"
path = "fuzz-targets/fuzz-total-supply-works.rs"
test = false
doc = false

[[bin]]
name = "fuzz-balance-of-works"
path = "fuzz-targets/fuzz-balance-of-works.rs"
test = false
doc = false


[[bin]]
name = "fuzz-transfer-works"
path = "fuzz-targets/fuzz-transfer-works.rs"
test = false
doc = false


[[bin]]
name = "fuzz-transfer-from-works"
path = "fuzz-targets/fuzz-transfer-from-works.rs"
test = false
doc = false

[[bin]]
name = "fuzz-allowance-must-not-change-on-failed-transfer"
path = "fuzz-targets/fuzz-allowance-must-not-change-on-failed-transfer.rs"
test = false
doc = false

[[bin]]
name = "fuzz-misuse-contract-storage"
path = "fuzz-targets/fuzz-misuse-contract-storage.rs"
test = false
doc = false
